--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                     <li><a href="index.html">Home</a></li>
 
 
-                    <li><a href="domain-lits1.html">Buy Domain</a></li>
+                    <li><a href="domainlist.html">Buy Domain</a></li>
 
 
                     <li><a href="sell-domain.html">Sell Domain</a></li>
