--- a/sell-domain.html
+++ b/sell-domain.html
@@ -87,7 +87,7 @@
                     <li><a href="index.html">Home</a></li>
 
 
-                    <li><a href="domain-lits1.html">Buy Domain</a></li>
+                    <li><a href="domainlist.html">Buy Domain</a></li>
 
 
                     <li><a href="sell-domain.html">Sell Domain</a></li>
@@ -100,7 +100,7 @@
 
 
               <div class="rt-nav-tolls d-flex align-items-center">
-    <a href="domain-lits1.html" class="rt-btn rt-gradient pill text-uppercase rt-Bshadow-1 rt-sm2  d-none d-md-block">Get Started
+    <a href="domainlist.html" class="rt-btn rt-gradient pill text-uppercase rt-Bshadow-1 rt-sm2  d-none d-md-block">Get Started
     </a>
     
     <div class="mobile-menu">
@@ -370,7 +370,7 @@
                         </p>
                     </div><!-- /.left-column -->
                     <div class="right-column">
-                        <a href="domain-lits1.html" class="rt-btn rt-gradient  text-uppercase  rt-Bshadow-2 wow fade-in-left pill" data-wow-duration="1s" data-wow-delay="0.6s">Get Started </a><!-- /.rt-btn -->
+                        <a href="domainlist.html" class="rt-btn rt-gradient  text-uppercase  rt-Bshadow-2 wow fade-in-left pill" data-wow-duration="1s" data-wow-delay="0.6s">Get Started </a><!-- /.rt-btn -->
                     </div><!-- /.right-column -->
                 </div><!-- /.inner-content -->
             </div><!-- /.col-12 -->
