--- a/domainlist.html
+++ b/domainlist.html
@@ -26,7 +26,7 @@
                 <thead>
                     <tr>
                         <th>Domain</th>
-                        <th>Registrar</th>
+                        <th>Broker</th>
                         <th>Status</th>
                         <th style="color: #fff;">Action</th>
                     </tr>
@@ -422,7 +422,7 @@
                 <tfoot>
                     <tr>
                         <th>Domain</th>
-                        <th>Registrar</th>
+                        <th>Broker</th>
                         <th>Status</th>
                         <th style="color: #fff;">Action</th>
                     </tr>
@@ -432,7 +432,7 @@
             <div class="home-btn">
                 <a href="index.html">Home</a>
             </div>
-            
+
         </div>
     </div>
 
