--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 <img src="assets/images/all-img/icon_2.png" alt="box-icon" draggable="false">
             </div><!-- /.icon-thumb -->
             <div class="iconbox-content">
-                <h5 class="f-size-24 rt-semiblod rt-mb-15">Futuer Proofing</h5>
+                <h5 class="f-size-24 rt-semiblod rt-mb-15">Future Proofing</h5>
                 <p class="line-height-34 rt-light3 rt-mb-20 section-p-content">Ensuring that your investment remains
                     valuable and relvant.
                 </p>
