--- a/second design/mentalhealthindiana.html
+++ b/second design/mentalhealthindiana.html
@@ -38,6 +38,11 @@
 
 
    <style>
+      
+      del{
+         font-weight: lighter;
+         color: red;
+      }
 
       .domain-name{
          font-size: 44px;
@@ -109,9 +114,9 @@
                            <li>Short URL</li>
                         </ul>
                         <p style="text-align: justify; font-weight: bold;">
-                           When you click the 'Buy Now', you will be redirected to dan.com(a GoDaddy brand), our trusted partner 
+                           When you click the 'Buy Now', you will be redirected to dan.com (a GoDaddy brand), our trusted partner 
                            for secure transaction. There, you can complete the purchase with confidence and have access to excellent customer
-                           support. We've partnered with dan.com(a GoDaddy brand) to ensure a smooth and secure transation for your peace of mind.
+                           support. We've partnered with dan.com (a GoDaddy brand) to ensure a smooth and secure transation for your peace of mind.
                         </p>
                         <div class="hero-btn-wrapper">
                            <!-- add link to buy here in the buy now -->
@@ -163,7 +168,7 @@
             <div class="left-shape primary-bg"></div>
             <div class="container">
                <div class="row full-height align-items-center position-relative">
-                  <h1 class="text-bg">DomainCompound</h1>
+                  <h1 class="text-bg"> <img src="img/logo.png" alt=""></h1>
                   <div class="col-md-12 p-50px-t p-50px-b md-p-10px-b">
                      <div class="hero-area text-center">
                         <h1 class="m-50px-b lg-m-25px-b"><span class="domain-offer">Make An Offer</span></h1>
@@ -196,11 +201,11 @@
                                  </div>
                                  <div class=" mb13">
                                     <input name="NAME" class="contact-name" id="offer-name" type="text"
-                                       placeholder="YOUR NAME*" required="">
+                                       placeholder="Your Name*" required="">
                                  </div>
                                  <div class="mb13">
                                     <input name="EMAIL" class="contact-email" id="offer-email" type="email"
-                                       placeholder="YOUR EMAIL*" required="">
+                                       placeholder="Your Email*" required="">
                                  </div>
                                  <div class="mb13">
                                     <input name="OFFER" class="contact-subject" id="offer-subject" type="text"
@@ -208,7 +213,7 @@
                                  </div>
                                  <div class="mb30">
                                     <textarea name="MESSAGE" class="contact-message" id="offer-message"
-                                       placeholder="Your Message"></textarea>
+                                       placeholder="Your Message (Optional)"></textarea>
                                  </div>
                                  <div style="text-align: center;">
                                     <button class="btn btn-default btn-filled animated-btn">Send Now</button>
