--- a/second design/aerialphotographyvancouver.html
+++ b/second design/aerialphotographyvancouver.html
@@ -36,48 +36,50 @@
    <!-- <link href="css/typography/varela-roboto.css" rel="stylesheet"> -->
 
    <style>
-
-
-      del{
+      del {
          font-weight: lighter;
          color: red;
       }
 
-      .domain-name{
+      .domain-name {
          font-size: 40px;
       }
-      @media (max-width: 780px){
-         .domain-name{
+
+      @media (max-width: 780px) {
+         .domain-name {
             font-size: 30px;
          }
       }
-      @media (max-width: 600px){
-         .domain-name{
+
+      @media (max-width: 600px) {
+         .domain-name {
             font-size: 25px;
          }
       }
-      @media (max-width: 450px){
-         .domain-name{
+
+      @media (max-width: 450px) {
+         .domain-name {
             font-size: 22px;
          }
       }
-      @media (max-width: 400px){
-         .domain-name{
+
+      @media (max-width: 400px) {
+         .domain-name {
             font-size: 16px;
          }
       }
-      @media (max-width: 299px){
-         .domain-name{
+
+      @media (max-width: 299px) {
+         .domain-name {
             font-size: 14px;
          }
       }
-
    </style>
 
 </head>
 
 <body class="demo-1 loading">
-   
+
    <!-- ========== Preloader Start ========== -->
    <div class="loader-wrapper">
       <div class="loader"></div>
@@ -105,7 +107,8 @@
                      <!-- left Content end -->
                      <div class="col-lg-6 p-50px-t p-50px-b md-p-10px-b" style="margin-top: -30px; margin-left: -0px">
                         <h2 class="m-25px-b">
-                           <span class="domain-name">aerialphotographyvancouver.com</span> <br> <span class="domain-offer">For Sale!</span>
+                           <span class="domain-name">aerialphotographyvancouver.com</span> <br> <span
+                              class="domain-offer">For Sale!</span>
                         </h2>
                         <ul class="feature-list">
                            <li>Quality SEO Rankings</li>
@@ -113,18 +116,23 @@
                            <li>Short URL</li>
                         </ul>
                         <p style="text-align: justify; font-weight: bold;">
-                           When you click the 'Buy Now', you will be redirected to dan.com (a GoDaddy brand), our trusted partner 
-                           for secure transaction. There, you can complete the purchase with confidence and have access to excellent customer
-                           support. We've partnered with dan.com (a GoDaddy brand) to ensure a smooth and secure transation for your peace of mind.
+                           When you click the 'Buy Now', you will be redirected to dan.com (a GoDaddy brand), our
+                           trusted partner
+                           for secure transaction. There, you can complete the purchase with confidence and have access
+                           to excellent customer
+                           support. We've partnered with dan.com (a GoDaddy brand) to ensure a smooth and secure
+                           transation for your peace of mind.
                         </p>
                         <div class="hero-btn-wrapper">
                            <!-- add link to buy here in the buy now -->
-                           <a href="https://dan.com/orders/checkout/aerialphotographyvancouver.com"><span class="domain-offering">Buy Now <del>$642</del> $399</span></a>
+                           <a href="https://dan.com/orders/checkout/aerialphotographyvancouver.com"><span
+                                 class="domain-offering">Buy Now <del>$642</del> $399</span></a>
                            <a class="btn btn-default enter" href="#">Make an Offer</a>
                         </div>
                         <ul class="social-links">
                            <!-- <li><a href="#"><i class="icofont-facebook"></i></a></li> -->
-                           <li><a href="https://twitter.com/_domaincompound" target="_blank"><i class="icofont-twitter"></i></a></li>
+                           <li><a href="https://twitter.com/_domaincompound" target="_blank"><i
+                                    class="icofont-twitter"></i></a></li>
                            <!-- <li><a href="#"><i class="icofont-google-plus"></i></a></li> -->
                            <!-- <li><a href="#"><i class="icofont-youtube-play"></i></a></li> -->
                            <!-- <li><a href="#"><i class="icofont-instagram"></i></a></li> -->
@@ -137,7 +145,8 @@
                      <!-- left Content end -->
 
                      <!-- Right Content start -->
-                     <div class="col-lg-6 p-50px-t p-50px-b md-p-10px-t text-lg-right text-center\" style="margin-left: 50px; margin-right: -200px;">
+                     <div class="col-lg-6 p-50px-t p-50px-b md-p-10px-t text-lg-right text-center\"
+                        style="margin-left: 50px; margin-right: -200px;">
                         <img src="img/hero-1.png" alt="">
                      </div>
                      <!-- Right Content end -->
@@ -155,7 +164,8 @@
          <div class="shape-wrap">
             <svg class="shape" width="100%" height="100vh" preserveAspectRatio="none" viewBox="0 0 1440 800">
                <path
-                  d="M -44,-50 C -52.71,28.52 15.86,8.186 184,14.69 383.3,22.39 462.5,12.58 638,14 835.5,15.6 987,6.4 1194,13.86 1661,30.68 1652,-36.74 1582,-140.1 1512,-243.5 15.88,-589.5 -44,-50 Z"
+                  d="M -44,-50 C -52.71
+                  ,28.52 15.86,8.186 184,14.69 383.3,22.39 462.5,12.58 638,14 835.5,15.6 987,6.4 1194,13.86 1661,30.68 1652,-36.74 1582,-140.1 1512,-243.5 15.88,-589.5 -44,-50 Z"
                   pathdata:id="M -44,-50 C -137.1,117.4 67.86,445.5 236,452 435.3,459.7 500.5,242.6 676,244 873.5,245.6 957,522.4 1154,594 1593,753.7 1793,226.3 1582,-126 1371,-478.3 219.8,-524.2 -44,-50 Z">
                </path>
             </svg>
@@ -175,7 +185,8 @@
                      <div class="row">
                         <div class="offset-sm-1 col-sm-10">
                            <div class="offer-form-wrap shadow-1 p-50px sm-p-15px m-15px-b">
-                              <form  action="https://api.web3forms.com/submit" method="post"> 
+                              <form action="https://api.web3forms.com/submit" method="post"
+                                 onsubmit="return validateOffer()">
                                  <input type="hidden" name="access_key" value="da77a666-1b4a-40a3-9639-aee8817f2c4f">
                                  <div class="message">
                                     <!-- <p class="email-loading alert alert-warning"><img src="img/loading.gif"
@@ -195,34 +206,39 @@
                                     </p> -->
                                  </div>
                                  <div class=" mb13">
+                                    <label for="DOMAIN">Domain</label>
                                     <input name="DOMAIN" class="contact-name" id="offer-name" type="text"
-                                       placeholder="TYPE THE DOMAIN YOU WANT TO MAKE OFFER FOR" required="" value="aerialphotographyvancouver.com">
+                                       placeholder="TYPE THE DOMAIN YOU WANT TO MAKE OFFER FOR" required=""
+                                       value="aerialphotographyvancouver.com">
                                  </div>
                                  <div class=" mb13">
+                                    <label for="NAME">Name</label>
                                     <input name="NAME" class="contact-name" id="offer-name" type="text"
-                                       placeholder="Your Name*" required="">
+                                       placeholder="" required="">
                                  </div>
                                  <div class="mb13">
+                                    <label for="EMAIL">Email</label>
                                     <input name="EMAIL" class="contact-email" id="offer-email" type="email"
-                                       placeholder="Your Email*" required="">
+                                       placeholder="" required="">
                                  </div>
                                  <div class="mb13">
+                                    <label for="OFFER">Your Offer "$"</label>
                                     <input name="OFFER" class="contact-subject" id="offer-subject" type="text"
-                                       placeholder="YOUR OFFER" required="" value="$">
+                                       placeholder="" required="" value="">
                                  </div>
                                  <div class="mb30">
                                     <textarea name="MESSAGE" class="contact-message" id="offer-message"
                                        placeholder="Your Message (Optional)"></textarea>
                                  </div>
                                  <div style="text-align: center;">
-                                    <button class="btn btn-default btn-filled animated-btn">Send Now</button>
+                                    <button class="btn btn-default btn-filled animated-btn" type="submit">Send Now</button>
                                  </div>
-                                 
+
                               </form>
                               <div style="text-align: center; margin-top: 10px;">
                                  <span id="msg" style="color: #fe880a; "></span>
                               </div>
-                              
+
                               <!-- Offer form end -->
                            </div>
                            <ul class="domain-feature">
@@ -244,6 +260,24 @@
    <!-- ========== Main End ========== -->
 
 
+   <script>
+      function validateOffer() {
+         // Get the offer amount from the form
+         var offerAmount = document.getElementById('offer-subject').value;
+
+         // Set your minimum offer amount
+         var minimumAmount = 100; // Set your desired minimum amount
+
+         // Check if the offer is above the minimum amount
+         if (offerAmount < minimumAmount) {
+            alert('Please make an improved offer');
+            return false; // Prevent form submission
+         }
+
+         // Continue with form submission if the offer is above the minimum amount
+         return true;
+      }
+   </script>
 
    <!-- jQuery -->
    <script src="js/jquery-3.2.1.min.js"></script>
