--- a/second design/aerialphotographyvancouver.html
+++ b/second design/aerialphotographyvancouver.html
@@ -270,7 +270,7 @@
 
          // Check if the offer is above the minimum amount
          if (offerAmount < minimumAmount) {
-            alert('Please make an improved offer');
+            alert('Offer below minimum. Kindly make an improved offer');
             return false; // Prevent form submission
          }
 
