--- a/second design/aerialphotographyvancouver.html
+++ b/second design/aerialphotographyvancouver.html
@@ -185,8 +185,7 @@
                      <div class="row">
                         <div class="offset-sm-1 col-sm-10">
                            <div class="offer-form-wrap shadow-1 p-50px sm-p-15px m-15px-b">
-                              <form action="https://api.web3forms.com/submit" method="post"
-                                 onsubmit="return validateOffer()">
+                              <form  action="https://api.web3forms.com/submit" method="post" onsubmit="return validateOffer()">
                                  <input type="hidden" name="access_key" value="da77a666-1b4a-40a3-9639-aee8817f2c4f">
                                  <div class="message">
                                     <!-- <p class="email-loading alert alert-warning"><img src="img/loading.gif"
@@ -208,7 +207,7 @@
                                  <div class=" mb13">
                                     <label for="DOMAIN">Domain</label>
                                     <input name="DOMAIN" class="contact-name" id="offer-name" type="text"
-                                       placeholder="TYPE THE DOMAIN YOU WANT TO MAKE OFFER FOR" required=""
+                                       placeholder="" required=""
                                        value="aerialphotographyvancouver.com">
                                  </div>
                                  <div class=" mb13">
