--- a/contact.html
+++ b/contact.html
@@ -514,7 +514,7 @@
           .then(function () {
             form.reset();
             setTimeout(() => {
-              result.innerHTML = "Email sent Successfully";
+              result.innerHTML = "Email sent successfully!";
               result.style.display = "none";
             }, 3000);
           });
